[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/Trophy_01_01.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Flavor_Text.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/LevelDone.gd" type="Script" id=4]

[node name="LevelDone" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -380.0
margin_bottom = -194.0
rect_min_size = Vector2( 260, 190 )
rect_pivot_offset = Vector2( -131, -93 )
popup_exclusive = true
script = ExtResource( 4 )

[node name="Panel" type="PanelContainer" parent="."]
margin_right = 260.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 253.0
margin_bottom = 183.0

[node name="Level" type="Label" parent="Panel/VBoxContainer"]
margin_right = 246.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 2 )
text = "Level completed"
align = 1

[node name="Stars" type="TextureRect" parent="Panel/VBoxContainer"]
margin_top = 22.0
margin_right = 246.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Time" type="Label" parent="Panel/VBoxContainer"]
margin_top = 108.0
margin_right = 246.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 2 )
text = "Your time: 00:00.0s"
align = 1

[node name="HighScore" type="Label" parent="Panel/VBoxContainer"]
margin_top = 130.0
margin_right = 246.0
margin_bottom = 148.0
custom_fonts/font = ExtResource( 2 )
text = "Highscore: 00:00.0s"
align = 1

[node name="Buttons" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 152.0
margin_right = 246.0
margin_bottom = 176.0

[node name="Next" type="Button" parent="Panel/VBoxContainer/Buttons"]
margin_right = 121.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Next Level"

[node name="Retry" type="Button" parent="Panel/VBoxContainer/Buttons"]
margin_left = 125.0
margin_right = 246.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Retry"

[connection signal="pressed" from="Panel/VBoxContainer/Buttons/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Buttons/Retry" to="." method="_on_Retry_pressed"]
